feat(jot): add update model, store, and route
* feat(jot): UpdateJotByJotID

updates a jot from the db that matches the user id and is on or before
the current date

* feat(jot): handleUpdateJotByJotID

* refactor(jot): return jots by date

if a jot is updated it will reorder in the db - order by date to ensure
consistency
