# server/service/jots/store.go
@@ -25,6 +25,8 @@ func (s *Store) GetJotsByUserID(month int, userID int64) (types.Jots, error) {
 		user_id = $1
 	AND 
 		EXTRACT(MONTH FROM jots."date") = $2
+	ORDER BY
+		date
 	`
 
 	rows, err := s.db.Query(context.Background(), query, userID, month)
@@ -48,4 +50,30 @@ func (s *Store) GetJotsByUserID(month int, userID int64) (types.Jots, error) {
 	}
 
 	return jots, nil
+}
+
+func (s *Store) UpdateJotByJotID(jot types.UpdateJotPayload, userID int64) error {
+	query := `
+	UPDATE 
+		jots
+	SET 
+		is_completed = $1
+	WHERE 
+		id = $2
+	AND
+		user_id = $3
+	AND
+		date <= CURRENT_TIMESTAMP
+	`
+
+	tag, err := s.db.Exec(context.Background(), query, jot.IsCompleted, jot.JotID, userID)
+	if err != nil {
+		return fmt.Errorf("Couldn't update jot: %s", err)
+	}
+
+	if tag.RowsAffected() == 0 {
+		return fmt.Errorf("Cannot update jots in the future")
+	}
+
+	return nil
 }
